# Neural-Network

./: .gitignore  CMakeLists.txt  Makefile  MathLib.h  Neural Network.md  NeuralNet.sln  NeuralNetwork.sln  Neuron.h  README.md  main.c
Dependencies/includes/glad/: glad.h
NeuralNet/: MathLib.h  NeuralNet.vcxproj  NeuralNet.vcxproj.filters  Neuron.h  main.c
includes/Math/: matrix.h  vec.h
src/: MathLib.h  Neuron.h  glad.c  main.cpp  math.cpp
